third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/pass/features/complex-expressions/alternate_exprs_non_exhaustive_with_range.rs
#[derive(num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero = 0,
    #[num_enum(alternatives = [2..255])]
    NonZero = 1,
}

fn main() {

}
